data/derived/comb/progs/unify/prog5474.ml.out
Characters 415-416:
  | Op (m, n, o) -> 1;;
                    ^
Error: This expression has type int but an expression was expected of type
         float
